fixup: keymap dts strictness, logging

--- a/config/boards/arm/glove80/glove80_lh_defconfig
+++ b/config/boards/arm/glove80/glove80_lh_defconfig
@@ -78,9 +78,9 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
 # Default to no logging
-CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_USB_LOGGING=y
 
 # CONFIG_ZMK_USB_BOOT=y
 
 # Turn on debugging to disable optimization
-CONFIG_DEBUG=n
+CONFIG_DEBUG=y
