--- a/config/boards/arm/glove80/glove80_rh_defconfig
+++ b/config/boards/arm/glove80/glove80_rh_defconfig
@@ -75,7 +75,7 @@ CONFIG_ZMK_BACKLIGHT_AUTO_OFF_USB=y
 CONFIG_ZMK_HID_CONSUMER_REPORT_USAGES_BASIC=y
 
 # Default to no logging
-CONFIG_ZMK_USB_LOGGING=n
+CONFIG_ZMK_USB_LOGGING=y
 
 # Turn on debugging to disable optimization
-CONFIG_DEBUG=n
+CONFIG_DEBUG=y
